--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ beautifulsoup4==4.12.3
 lxml==5.2.2
 rapidfuzz==3.9.6
 openai==1.40.2
+# Pin httpx to a version compatible with openai==1.40.2 (avoids 'proxies' kw error)
+httpx==0.27.2
 python-dotenv==1.0.1
 urllib3==2.2.2
 gunicorn
